# Test_1_Django

./: .dockerignore  Dockerfile  README  docker-compose.yml  pyproject.toml  testovoe-zadanie-na-pozitsiiu-junior-python-de.md
TestedProject1/: db.sqlite3  manage.py  pytest.ini
TestedProject1/TestedProject1/: asgi.py  settings.py  urls.py  wsgi.py
TestedProject1/authentication/: models.py  serializers.py  urls.py  views.py
TestedProject1/authentication/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_hashed_password.py  0003_rename_hashed_password_user_password.py
TestedProject1/authentication/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
TestedProject1/authentication/utils/: __init__.py  authenticated.py  jwt_utils.py  reset_password_utils.py
TestedProject1/core/: celery.py  redis.py  settings.py  urls.py
TestedProject1/links/: models.py  serializers.py  urls.py  views.py
TestedProject1/links/migrations/: 0001_initial.py  0002_rename_short_description_collection_description_and_more.py  0003_alter_collection_description_alter_link_description_and_more.py  0004_alter_collection_description_alter_collection_title_and_more.py
TestedProject1/links/tests_links/: __init__.py  test_models.py  test_serializers.py  test_views.py
TestedProject1/links/utils/: __init__.py  link_url.py  url_utils.py
TestedProject1/tests/: conftest.py
TestedProject1/tests/tests_celery/: test_worker.py
TestedProject1/users/: models.py  serializers.py  tasks.py  urls.py  views.py
TestedProject2/: create sqlite.py  test.db
(+23 files in other folders)
