[tool.poetry]
name = "testedapp"
version = "0.1.0"
description = ""
authors = ["Isfireomat <dfdfgfgf666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
gunicorn = "^23.0.0"
djangorestframework = "^3.15.2"
pyjwt = "^2.9.0"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
beautifulsoup4 = "^4.12.3"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
redis = "^5.2.0"
celery = {extras = ["redis"], version = "^5.4.0"}
pytest-celery = "^1.1.3"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
